--- a/package.json
+++ b/package.json
@@ -1,37 +1,53 @@
 {
-  "name": "DROWN",
-  "description": "DROWN",
-  "version": "2.1.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
-  "dependencies": {
-    "canvas": "^1.6.11",
-    "canvas-prebuilt": "^1.6.5-prerelease.1",
-    "discord.js": "^11.3.2",
-    "discord.js-musicbot-addon": "^1.10.3",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "file-system": "^2.2.2",
-    "fortnite": "^4.1.1",
-    "fs": "0.0.1-security",
-    "get-youtube-id": "^1.0.0",
-    "jimp": "^0.2.28",
-    "mojang-api": "0.0.2",
-    "moment": "^2.22.2",
-    "ms": "2.1.1",
-    "node-opus": "^0.2.9",
-    "nvm": "0.0.4",
-    "opusscript": "0.0.6",
-    "quick.db": "^6.3.1",
-    "request": "^2.87.0",
-    "simple-youtube-api": "^5.0.2",
-    "superagent": "^3.8.3",
-    "youtube-info": "^1.2.0",
-    "ytdl-core": "^0.20.4"
-  },
-  "engines": {
-    "node": "8.x"
+    "name": "Test",
+    "description": "Test",
+    "version": "2.0.0",
+    "main": "bot.js",
+    "scripts": {
+      "start": "node bot.js"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git://github.com/then/fs.git"
+    },
+    "keywords": [
+      "promise",
+      "then",
+      "fs",
+      "core"
+    ],
+    "author": "Nathan Zadoks",
+    "license": "MIT",
+    "bugs": {
+      "url": "https://github.com/then/fs/issues"
+    },
+    "devDependencies": {
+      "bash-color": "0.0.3"
+    },
+    "dependencies": {
+      "canvas": "1.6.10",
+      "hh-mm-ss": "1.2.0",
+      "figlet": "1.2.0",
+      "dateformat": "3.0.3",
+      "google-translate-api": "2.3.0",
+      "discord.js": "11.1.0",
+      "ffmpeg-binaries": "3.2.2-3",
+      "fs": "0.0.1-security",
+      "get-youtube-id": "^1.0.0",
+      "moment": "2.22.1",
+      "moment-duration-format": "^2.2.2",
+      "ms": "2.1.1",
+      "node-opus": "0.2.7",
+      "pretty-ms": "3.1.0",
+      "request": "^2.81.0",
+      "short-number": "1.0.6",
+      "simple-youtube-api": "5.0.1",
+      "youtube-info": "^1.2.0",
+      "jimp": "0.2.28",
+      "quick.db": "6.2.1",
+      "sqlite": "2.9.2",
+      "child_process": "1.0.2",
+      "random-number": "0.0.9",
+      "ytdl-core": "0.20.2"
+    }
   }
-}
